fixed overflow on aaru

--- a/src/app/components/aaru/aaru.component.scss
+++ b/src/app/components/aaru/aaru.component.scss
@@ -27,6 +27,7 @@ section {
 		justify-content: center;
 		text-align: left;
 		list-style: square;
+		overflow: hidden;
 		padding-left: 10%;
 
 		li {
